# WebAmp

./: .gitattributes  .gitignore  .gitmessage  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  GITHUB_SETUP.md  LICENSE  NEXT_STEPS.md  QUICK_START_VERCEL.md  README.md  tsconfig.json
docs/: ADMIN_COURS.md  ADMIN_PANEL.md  ANALYSE_UTILITE_MIDI.md  API.md  ARCHITECTURE.md  AUDIT_GLOBAL.md  AUDIT_TAILWIND.md  BUILD.md  CABINET_MICROPHONE.md  CHANGELOG_MIDI_REMOVAL.md  COMPONENTS.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  EVOLUTION_MOTEUR_SONORE.md  GETTING_STARTED.md  GIT_SETUP.md  LOGI_OPTION_PLUS.md  OPTIMIZATION.md  README.md  REFERENCE_AMPLIS.md  REFERENCE_COURS.md  REFERENCE_PEDALES.md  RLS_SECURITY_GUIDE.md  ROADMAP.md  SUPABASE_SECURE_RLS.sql  SUPABASE_SETUP.sql  SUPABASE_SONGSTERR_INTEGRATION.sql  SUPABASE_SONGSTERR_UPDATE.sql  SUPABASE_TABLATURES_UPDATE.sql  SUPABASE_USER_STATS_RLS_FIX.sql  TESTING.md  VERCEL_ENV_VARS.md  VERCEL_SETUP.md  VERIFICATION_AUDIO_MIDI.md
docs/tabs/: Shake it off.html  Shake it off.json  ShakeItOff-description.txt  extractTablature.js
frontend/: .vercelignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/audio/: PedalboardEngine.ts  README.md  cabinetSimulator.ts  config.ts  effects.ts  looper.ts  masterEqualizer.ts  metronome.ts  microphoneSimulator.ts  modeEffects.ts  pedalPreviewConfig.ts  roomSimulator.ts  tuner.ts  workletEffects.ts
frontend/src/auth/: AppWithAuth.tsx  AuthProvider.tsx  supabaseClient.ts  types.ts
frontend/src/components/: AmplifierLibraryModal.tsx  AmplifierSelector.tsx  AuthModal.tsx  Block.tsx  BottomNavigation.tsx  BrandSupportModal.tsx  CTA.tsx  CabinetSelector.tsx  Checkbox.tsx  ContactSupportModal.tsx  Display.tsx  Dropdown.tsx  EqualizerPanel.tsx  IRUploadModal.tsx  KeyboardShortcutsConfig.tsx  Knob.tsx  Loader.tsx  Looper.tsx  MainBlock.tsx  Metronome.tsx  MicrophoneSelector.tsx  Modal.tsx  Panel.tsx  PartnerLogosCarousel.tsx  PartnerThankYouModal.tsx  Pedal.tsx  PedalLibraryModal.tsx  Pedalboard.tsx  Potentiometer.tsx  PresetComparison.tsx  PresetExportModal.tsx  PresetManager.tsx  PresetsManager.tsx  ProgressBar.tsx  RockStarProfilesModal.tsx  RoomSimulator.tsx  ScrollArea.tsx  SearchBar.tsx  SettingsPanel.tsx  SimpleEqualizerPanel.tsx  (+9 more)
frontend/src/config/: constants.ts
frontend/src/contexts/: DrumMachineContext.tsx  KeyboardShortcutsContext.tsx  ThemeContext.tsx  patterns.ts
frontend/src/data/: amplifiers.ts  cabinets.ts  chords.ts  effectsInfo.ts  microphones.ts  musicians.ts  nam-library.json  pedalAccentColors.ts  pedals.ts  rockStarProfiles.ts  tutorials.ts
frontend/src/hooks/: useAIPreferences.ts  useAnalytics.ts  useAuth.ts  useCatalog.ts  useDebounce.ts  useFeatureFlags.ts  useKeyboardShortcuts.ts  useLMS.ts  usePedalboardEngine.ts
frontend/src/lib/: supabase.ts  supabaseClient.ts
frontend/src/pages/: AccountPage.tsx  AdminPage.tsx  DawPage.tsx  DrumMachinePage.tsx  GalleryPage.tsx  HomePage.tsx  LearnPage.tsx  LooperPage.tsx  MixingConsolePage.tsx  PracticePage.tsx  SettingsPage.tsx  WebAmpPage.tsx  index.ts
frontend/src/scripts/: addMissingChords.ts  addSongCourses.ts  cleanDuplicateCourses.ts  debugTablatureConsole.js  debugTablatureLesson.js  generateShakeItOffDescription.js  importCourses.ts  importShakeItOffTabs.ts  shakeItOffTablaturesData.ts  updateShakeItOffTablatures.ts  updateSongsterrIds.ts
frontend/src/services/: admin.ts  ai.ts  aiPreferences.ts  analytics.ts  contact.ts  dlcPackGenerator.ts  dlcPacks.ts  freesound.ts  gallery.ts  galleryRecommendations.ts  gemini.ts  imageService.ts  index.ts  lms.ts  logger.ts  musicbrainz.ts  songsterr.ts  supabase.ts  tablatures.ts  websocket.ts
frontend/src/styles/: animations.css  neumorphic-design-system.css
frontend/src/test/: browser-compatibility.test.ts  performance.test.ts  setup.ts  stress.test.ts
frontend/src/types/: daw.ts  gallery.ts  keyboardShortcuts.ts
frontend/src/utils/: abcConverter.ts  brandLogoUtils.ts  brandLogos.ts  certificationStatus.ts  courseAdapter.ts  courseQualityScore.ts  index.ts  (+20 more)
native/: CMakeLists.txt  README_DRIVERS.md  README_PACKAGING.md
native/include/: asio_driver.h  audio_driver.h  audio_engine.h  buffer_pool.h  coreaudio_driver.h  dsp_pipeline.h  effect_base.h  effect_chain.h  effect_manager.h  fft_helper.h  ir_convolution.h  ir_loader.h  json_parser.h  nam_loader.h  pipewire_driver.h  preset_manager.h  ring_buffer.h  simd_helper.h  test_tone_generator.h  wasapi_driver.h  websocket_server.h
native/include/effects/: chorus.h  delay.h  distortion.h  eq.h  flanger.h  fuzz.h  overdrive.h  reverb.h  tremolo.h
native/src/: asio_driver.cpp  audio_engine.cpp  buffer_pool.cpp  coreaudio_driver.cpp  dsp_pipeline.cpp  effect_chain.cpp  effect_manager.cpp  fft_helper.cpp  ir_convolution.cpp  ir_loader.cpp  json_parser.cpp  main.cpp  nam_loader.cpp  pipewire_driver.cpp  preset_manager.cpp  simd_helper.cpp  test_tone_generator.cpp  wasapi_driver.cpp  websocket_server.cpp
native/src/effects/: chorus.cpp  delay.cpp  distortion.cpp  eq.cpp  flanger.cpp  fuzz.cpp  overdrive.cpp  reverb.cpp  tremolo.cpp
native/tests/: CMakeLists.txt  test_audio_engine.cpp  test_dsp_pipeline.cpp  test_effect_chain.cpp  test_effects.cpp  test_main.cpp  test_performance.cpp  test_websocket.cpp
public/worklets/: octaver-processor.js  octavia-processor.js  pitch-shifter-processor.js  rotary-processor.js  univibe-processor.js  wah-processor.js
scripts/: auditPedals.js  build-native.bat  build-native.sh  create-release.ps1  deploy-tutorials-console.js  deploy-tutorials-simple.js  deploy-tutorials-to-supabase.js  generate-tutorials-sql.js  generatePedalComponents.js  start-all.ps1  start-frontend.ps1  start-native.ps1  tsconfig.json  tsconfig.json.backup
shared/protocol/: messages.md
supabase/: APPLY_MIGRATION.md  README.md  deploy-functions.ps1  seed.ps1
supabase/functions/: README.md  deno.json  tsconfig.json
supabase/migrations/: 0001_schema.sql
supabase/seed/: seed_catalog.ts
(+232 files in other folders)
